nextjs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-app
  labels:
    app: nextjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
        - name: nextjs-app
          image: "quickansf9:latest"  # Replace these with actual image and tag or use environment variables
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          command: ["/bin/sh", "-c", "echo Starting... && npm run dev"]
---
apiVersion: v1
kind: Service
metadata:
  name: nextjs-app
spec:
  selector:
    app: nextjs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP  # Or LoadBalancer if you want external access
